--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BangkitApi</string>
     <string name="event_judul">Judul Event</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="event_date">Tanggal Event : %1$s</string>
+    <string name="event_quota">Kuota : %1$d</string>
 </resources>
