--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="event_date">Tanggal Event : %1$s</string>
     <string name="event_quota">Kuota : %1$d</string>
+    <string name="image_cover">Image Cover</string>
+    <string name="link_registrasi">Link Registrasi</string>
+    <string name="judul_event">Judul Event</string>
+    <string name="addfavorite">addfavorite</string>
+    <string name="event_owner">Event Owner</string>
+    <string name="tanggal">Tanggal</string>
+    <string name="kuota">Kuota</string>
+    <string name="deskripsi">Deskripsi</string>
+    <string name="favorite_event">Favorite Event</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
